# paper-build

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  resources.qrc  test
.github/workflows/: build.yml  container-build-release.yml
src/: main.cpp  resources.qrc
src/app/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/dialogs/: ExamInfoDialog.cpp  ExamInfoDialog.h
src/exporters/: DocxExporter.cpp  DocxExporter.h  PdfExporter.cpp  PdfExporter.h
src/models/: Exam.h  MCQ.h  PaperModel.cpp  PaperModel.h  Question.h  Section.h
src/pages/exam_info/: ExamInfoPage.cpp  ExamInfoPage.h  ExamInfoPage.ui
src/pages/preview/: PreviewPage.cpp  PreviewPage.h  PreviewPage.ui
src/pages/question_editor/: QuestionEditorPage.cpp  QuestionEditorPage.h  QuestionEditorPage.ui
src/utils/: Constants.h  FileUtils.h  Validation.h
src/widgets/questionWidget/: QuestionWidget.cpp  QuestionWidget.h  QuestionWidget.ui
src/widgets/sectionWidget/: SectionWidget.cpp  SectionWidget.h  SectionWidget.ui
tests/: TestLayout.cpp
